fixed styles on mobile sizes

--- a/src/App.scss
+++ b/src/App.scss
@@ -95,3 +95,8 @@
   width: 100%;
   margin: 40px 0 !important;
 }
+
+.addnnew-title{
+  margin-left: 2.5em;
+  font-size: 1.5em;
+}
